<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorOnPrimary">

        <com.hamiddev.nikeshop.custom.NikeToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:nt_show_back="false"
            app:nt_title="@string/profile" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="32dp"
                android:scaleType="centerInside"
                app:shapeAppearance="@style/Avatar"
                app:srcCompat="@drawable/ic_nike_logo"
                app:strokeColor="?dividerColor"
                app:strokeWidth="1dp" />

            <TextView
                android:id="@+id/usernameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAppearance="?textAppearanceBody1"
                tools:text="@string/guest_user" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:divider="@drawable/shape_divider"
                android:orientation="vertical"
                android:paddingRight="12dp"
                android:showDividers="middle|beginning|end">

                <TextView
                    android:id="@+id/edit_user_btn"
                    style="@style/ProfileLinks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/editProfile"
                    app:drawableLeftCompat="@drawable/ic_favorites_20dp" />

                <TextView
                    android:id="@+id/favorite_products_btn"
                    style="@style/ProfileLinks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites"
                    app:drawableLeftCompat="@drawable/ic_favorites_20dp" />

                <TextView
                    android:id="@+id/order_history_btn"
                    style="@style/ProfileLinks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/orderHistory"
                    app:drawableLeftCompat="@drawable/ic_order_history" />

                <TextView
                    android:id="@+id/login_btn"
                    style="@style/ProfileLinks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signIn"
                    app:drawableLeftCompat="@drawable/ic_sign_out" />

            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>