<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:viewBindingIgnore="false">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?colorOnPrimary"
        app:layout_collapseMode="pin">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlways">

            <com.hamiddev.nikeshop.custom.NikeToolbar
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:nt_show_back="false"
                app:nt_title="@string/home" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/bannerSliderContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/bannerSliders"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="16dp" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/sliderIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="12dp"
                    app:dotsColor="#E0DCDC"
                    app:dotsCornerRadius="8dp"
                    app:dotsSize="5dp"
                    app:dotsSpacing="3dp"
                    app:dotsWidthFactor="4"
                    app:progressMode="false"
                    app:selectedDotColor="@color/black" />
            </FrameLayout>


            <com.hamiddev.nikeshop.custom.NikeHomeItem
                android:id="@+id/item1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/bannerSliderContainer"
                app:nike_label_text="@string/sortLatest"
                app:nike_show_more_text="@string/viewAll" />


            <com.hamiddev.nikeshop.custom.NikeHomeItem
                android:id="@+id/item2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/item1"
                app:nike_label_text="@string/sortPopular"
                app:nike_show_more_text="@string/viewAll" />

            <com.hamiddev.nikeshop.custom.NikeHomeItem
                android:id="@+id/item3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/item2"
                app:nike_label_text="@string/sortPriceHighToLow"
                app:nike_show_more_text="@string/viewAll" />

            <com.hamiddev.nikeshop.custom.NikeHomeItem
                android:id="@+id/item4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/item3"
                app:nike_label_text="@string/sortPriceLowToHigh"
                app:nike_show_more_text="@string/viewAll" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>