<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.hamiddev.nikeshop.custom.NikeToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:nt_title="@string/shippingToolbarTitle" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="32dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameEtl"
                style="@style/ShippingTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameEt"
                    android:textAppearance="?textAppearanceBody1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstName"
                    android:text="سعید" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameEtl"
                style="@style/ShippingTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEt"
                    android:textAppearance="?textAppearanceBody1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastName"
                    android:text="شاهینی" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/postalCodeEtl"
                style="@style/ShippingTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postalCodeEt"
                    android:textAppearance="?textAppearanceBody1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/postalCode"
                    android:text="1234567890" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberEtl"
                style="@style/ShippingTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberEt"
                    android:textAppearance="?textAppearanceBody1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phoneNumber"
                    android:text="09378122153" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressEtl"
                style="@style/ShippingTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressEt"
                    android:textAppearance="?textAppearanceBody1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:text="asdasddsdasasdasdasdasdasdasasdsdsasdas" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="right"
                android:text="@string/purchaseDetail"
                android:textAppearance="?textAppearanceHeadline6"
                android:textColor="?android:textColorSecondary" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="12dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/totalPrice"
                        android:textAppearance="?textAppearanceBody1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/shippingCost"
                        android:textAppearance="?textAppearanceBody1"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/payablePrice"
                        android:textAppearance="?textAppearanceBody1"
                        app:layout_constraintStart_toStartOf="@+id/textView5"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <TextView
                        android:id="@+id/totalPriceTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:textAppearance="?textAppearanceBody1"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/textView3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/textView3"
                        tools:text="16000" />

                    <TextView
                        android:id="@+id/shippingCostTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?textAppearanceBody1"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/textView5"
                        app:layout_constraintEnd_toEndOf="@+id/totalPriceTv"
                        app:layout_constraintTop_toTopOf="@+id/textView5"
                        tools:text="15000" />

                    <TextView
                        android:id="@+id/payablePriceTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?textAppearanceBody1"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/textView6"
                        app:layout_constraintEnd_toEndOf="@+id/shippingCostTv"
                        app:layout_constraintTop_toTopOf="@+id/textView6"
                        tools:text="14000" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="12dp"
                        android:background="?dividerColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="?dividerColor"
                        android:layout_marginTop="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/codBtn"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cashOnDelivery" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/onlinePaymentBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/onlinePayment" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>